Project-I/CF-1VPC-4PUB.yml
---
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "VPC Creation with Public and Private subnet"
        Parameters:
          - VPCNAME
          - VPCCIDR
          - PUBSUBCIDR
Parameters:
  VPCNAME:
    Description: "Enter your VPC name"
    Type: String
  VPCCIDR:
    Description: "Enter VPC CIDR"
    Type: String
  DEVSUBCIDR:
    Description: "Enter CIDR for public subnet for DEV env"
    Type: String
  QASUBCIDR:
    Description: "Enter CIDR for public subnet for QA env"
    Type: String
  DRSUBCIDR:
    Description: "Enter CIDR for public subnet for DR env"
    Type: String
  PRODSUBCIDR:
    Description: "Enter CIDR for public subnet for PROD env"
    Type: String        
  
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: !Ref "VPCCIDR"
      EnableDnsHostnames: "True"
      EnableDnsSupport: "True"
      Tags: 
        - Key: "Name"
          Value: !Ref "VPCNAME"
  IG:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags: 
        - Key: "Name"
          Value: !Join [ "-", [ !Ref "VPCNAME", IG ] ]
  IGAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref "IG"
      VpcId: !Ref "VPC"
  DEVSUB:
    Type: AWS::EC2::Subnet
    Properties: 
      CidrBlock: !Ref "DEVSUBCIDR"
      MapPublicIpOnLaunch: "True"
      Tags: 
        - Key: "Name"
          Value: "DEVSUB"
      VpcId: !Ref "VPC"
  DEVRT:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
        - Key: "Name"
          Value: "DEVRT"
      VpcId: !Ref "VPC"
  DEVSubRTassoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref DEVRT
      SubnetId: !Ref DEVSUB
  DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: "IGAttach"
    Properties: 
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref "IG"
      RouteTableId: !Ref "DEVRT"
  DEVSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: "SG for DEV Public Subnet"
      GroupName: "DEVSG"
      SecurityGroupIngress: 
        - CidrIp: "0.0.0.0/0"
          Description: "Allow ssh to all"
          FromPort: 22
          IpProtocol: "tcp"
          ToPort: 22
        - CidrIp: "0.0.0.0/0"
          Description: "Allow http to all"
          FromPort: 80
          IpProtocol: "tcp"
          ToPort: 80
      Tags: 
        - Key: "Name"
          Value: "DEVSG"
      VpcId: !Ref "VPC"

  QASUB:
    Type: AWS::EC2::Subnet
    Properties: 
      CidrBlock: !Ref "QASUBCIDR"
      MapPublicIpOnLaunch: "True"
      Tags: 
        - Key: "Name"
          Value: "QASUB"
      VpcId: !Ref "VPC"
  QART:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
        - Key: "Name"
          Value: "QART"
      VpcId: !Ref "VPC"
  QASubRTassoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref QART
      SubnetId: !Ref QASUB
  DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: "IGAttach"
    Properties: 
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref "IG"
      RouteTableId: !Ref "QART"
  QASG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: "SG for QA Public Subnet"
      GroupName: "QASG"
      SecurityGroupIngress: 
        - CidrIp: "0.0.0.0/0"
          Description: "Allow ssh to all"
          FromPort: 22
          IpProtocol: "tcp"
          ToPort: 22
        - CidrIp: "0.0.0.0/0"
          Description: "Allow http to all"
          FromPort: 80
          IpProtocol: "tcp"
          ToPort: 80
      Tags: 
        - Key: "Name"
          Value: "QASG"
      VpcId: !Ref "VPC"

  DRSUB:
    Type: AWS::EC2::Subnet
    Properties: 
      CidrBlock: !Ref "DRSUBCIDR"
      MapPublicIpOnLaunch: "True"
      Tags: 
        - Key: "Name"
          Value: "DRSUB"
      VpcId: !Ref "VPC"
  DRRT:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
        - Key: "Name"
          Value: "DRRT"
      VpcId: !Ref "VPC"
  DRSubRTassoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref DRRT
      SubnetId: !Ref DRSUB
  DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: "IGAttach"
    Properties: 
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref "IG"
      RouteTableId: !Ref "DRRT"
  DRSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: "SG for DR Public Subnet"
      GroupName: "DRSG"
      SecurityGroupIngress: 
        - CidrIp: "0.0.0.0/0"
          Description: "Allow ssh to all"
          FromPort: 22
          IpProtocol: "tcp"
          ToPort: 22
        - CidrIp: "0.0.0.0/0"
          Description: "Allow http to all"
          FromPort: 80
          IpProtocol: "tcp"
          ToPort: 80
      Tags: 
        - Key: "Name"
          Value: "DRSG"
      VpcId: !Ref "VPC"

  PRODSUB:
    Type: AWS::EC2::Subnet
    Properties: 
      CidrBlock: !Ref "PRODSUBCIDR"
      MapPublicIpOnLaunch: "True"
      Tags: 
        - Key: "Name"
          Value: "PRODSUB"
      VpcId: !Ref "VPC"
  PRODRT:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
        - Key: "Name"
          Value: "PRODRT"
      VpcId: !Ref "VPC"
  PRODSubRTassoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PRODRT
      SubnetId: !Ref PRODSUB
  DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: "IGAttach"
    Properties: 
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref "IG"
      RouteTableId: !Ref "PRODRT"
  PRODSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: "SG for PROD Public Subnet"
      GroupName: "PRODSG"
      SecurityGroupIngress: 
        - CidrIp: "0.0.0.0/0"
          Description: "Allow ssh to all"
          FromPort: 22
          IpProtocol: "tcp"
          ToPort: 22
        - CidrIp: "0.0.0.0/0"
          Description: "Allow http to all"
          FromPort: 80
          IpProtocol: "tcp"
          ToPort: 80
      Tags: 
        - Key: "Name"
          Value: "PRODSG"
      VpcId: !Ref "VPC"
